adding network preferences loading

--- a/usb-dmx/firmware/webinterface.html
+++ b/usb-dmx/firmware/webinterface.html
@@ -41,7 +41,11 @@
 				<input type="radio" id="fixed" name="ip_type" value="fixed">
 				<label for="fixed">Fixed IP</label><br>
 				<label for="ip">IP:</label>
-				<input type="text" id="ip" name="ip" value="192.168.0.1"><br>
+				<input type="text" id="ip" name="ip" value="192.168.1.10"><br>
+				<label for="gateway">Gateway:</label>
+				<input type="text" id="gateway" name="gateway" value="192.168.1.1"><br>
+				<label for="subnet">Subnet Mask:</label>
+				<input type="text" id="subnet" name="subnet" value="255.255.0.0"><br>
 				<label for="hostname">Hostname:</label>
 				<input type="text" id="hostname" name="hostname" value="trance"><br>
 				<input type="submit" value="Submit">
