--- a/usb-dmx/firmware/firmware/webinterface.html
+++ b/usb-dmx/firmware/firmware/webinterface.html
@@ -15,14 +15,6 @@ const char webinterface[] PROGMEM = R"rawliteral(
     <small>Revision 1</small>
   </div>
   <div class='content'>
-    
-    <h1>Status</h1>
-
-    <fieldset>
-      <p>WIFI: %WIFISTATUS%</p>
-      <p>Ascn: to do</p>
-      <p>MQTT: to do</p>
-    </fieldset>
 
     <h1>Settings</h1>
 
@@ -32,7 +24,7 @@ const char webinterface[] PROGMEM = R"rawliteral(
         <label for="ssid">SSID:</label>
         <input type="text" id="ssid" name="ssid" value="%ssid%"><br>
         <label for="password">Password:</label>
-        <input type="text" id="password" name="%password%"><br>
+        <input type="text" id="password" name="password"><br>
         <input type="submit" value="Submit">
       </form>
     </fieldset>
@@ -59,11 +51,11 @@ const char webinterface[] PROGMEM = R"rawliteral(
     <fieldset>
       <legend>Connectivity</legend>
       <form>
-        <input type="checkbox" id="ascn" name="connections" value="ascn" checked>
+        <input type="radio" id="ascn" name="connections" value="ascn" %ascn%>
         <label for="ascn">Ascn / E31.1</label><br>
-        <input type="checkbox" id="artnet" name="connections" value="artnet">
+        <input type="radio" id="artnet" name="connections" value="artnet" %artnet%>
         <label for="artnet">Artnet</label><br>
-        <input type="checkbox" id="mqtt" name="connections" value="mqtt">
+        <input type="radio" id="mqtt" name="connections" value="mqtt" %mqtt%>
         <label for="mqtt">Mqtt</label><br>
         <input type="submit" value="Submit">
       </form>
